using System;

public class Constants {
	/// <summary>Animation parameter for contact attack</summary>
	public static String AnimParamContact = "Ataque";

	/// <summary>Animation parameter for aliveness</summary>
	public static String AnimParamDead = "Morreu";

	/// <summary>Animation parameter for getting hit</summary>
	public static String AnimParamHit = "Atingido";

	/// <summary>Animation parameter for shooting. Not used yet.</summary>
	public static String AnimParamShooting = "Shooting";

	/// <summary>Animation parameter for movement speed</summary>
	public static String AnimParamSpeed = "Veloc";

	/// <summary>Axis for controlling front walking</summary>
	public static String AxisVertical = "Vertical";

	/// <summary>Axis for controlling turning</summary>
	public static String AxisHorizontal = "Horizontal";

	/// <summary>Axis for controlling lateral walking</summary>
	public static String AxisSideWalk = "SideWalk";

	/// <summary>Axis for camera changes</summary>
	public static String AxisChangeCamera = "CameraChange";

	/// <summary>Axis for shooting</summary>
	public static String AxisFire1 = "Fire1";
	public static String AxisJump = "Jump";
	public static String AxisMouseX = "Mouse X";
	public static String AxisMouseY = "Mouse Y";
}
